--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./Assets/css/style.css">
     </head>
     <body>
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <section>
             <h2>Hero/Jumbotron</h2>
@@ -28,5 +47,3 @@
         </footer>
     </body>
 </html>
-
-suppppp
